# r2-d2

./: .gitignore  Cargo.toml  README.md  pyproject.toml  r2.example
r2_d2/: __init__.py  r2_d2.pyi
src/: cli.rs  helpers.rs  lib.rs  main.rs  r2.rs  r2_purge.rs  r2_upload.rs  rustic_progress.rs
src/commands/: auth.rs  init.rs  list.rs  mod.rs  overview.rs  upload.rs  usage.rs  wipe.rs
src/rustic_backends/: mod.rs  r2_backend.rs
