[package]
name = "r2-d2"
version = "0.1.1"
edition = "2024"
readme = "README.md"
description = "Simple Client for Cloudflare R2 to manage Restic Backups"
categories = ["development-tools", "command-line-interface", "command-line-utilities"]
keywords = ["Python", "s3", "r2", "pip", "packaging"]
repository = "https://github.com/robinvandernoord/uvx2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "r2_d2"
crate-type = ["cdylib"]

[dependencies]
# note - pyo3 and pyo3-asyncio MUST Have the same version!
pyo3 = { version = "0.20", features = ["abi3-py38", "extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

clap = { version = "4.5.32", features = ["derive"] }
anstyle = "1.0.10"
clap_complete = "4.5.47"
resolve-path = "0.1.0"
dotenvy = "0.15"
url = "2.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3"
tabled = { version = "0.20", features = ["ansi"] }
byte-unit = "5.1"
owo-colors = "4.0"
anyhow = "1.0"
scopeguard = "1.2" # defer

# aws:
# aws-config = { version = "1.5", features = ["behavior-version-latest"] }
# aws-sdk-s3 = { version = "1.38", features = ["rt-tokio", "behavior-version-latest"] }
# aws-smithy-runtime = { version = "1.6" }
# aws-smithy-runtime-api = { version = "1.7", features = ["client"] }
# aws-smithy-types = { version = "1.2", features = ["http-body-0-4-x"] }
# aws-credential-types = { version = "1.2" }

# restic
rustic_core = { version = "0.7.3", default-features = false }
# rustic_backend = { version = "0.5.2", default-features = false, features = ["opendal"] }
opendal = { version = "0.54", default-features = false, features = ["services-s3"] }
bytes = "1.10.1"
typed-path = "0.11"
toml = "0.9"

[lints.clippy]
# categories:
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# specific ones:
module_name_repetitions = "allow"
future_not_send = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
unused_self = "allow"
